# whattheflat

./: .env.example  .gitignore  CLAUDE.md  README.md  index.html  main.py  package-lock.json  package.json  product_requirements.md  pyproject.toml  vite.config.js
.github/workflows/: release.yml
api/: config.py
api/routers/: chat.py
api/services/: ai.py
electron/: entitlements.mac.plist  main.cjs  main.js
frontend/: package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: AudioCapture.jsx  ProgressionBanner.jsx
frontend/src/lib/: theory.js
src/: App.jsx  index.css
src/components/: AudioCapture.jsx  BassFretboard.jsx  ChordBox.jsx  ChordDetailModal.jsx  CurrentJamPanel.jsx  DebugView.jsx  DrumView.jsx  EducationPanel.jsx  ExplorePanel.jsx  Fretboard.jsx  LoopSlot.jsx  LoopStation.jsx  LoopTrimmer.jsx  MiniPiano.jsx  MusicTeacher.jsx  Piano.jsx  ProgressionBanner.jsx  RiffDiagram.jsx  Settings.jsx
src/lib/: education.js  essentiaHPCP.js  theory.js  voicings.js
src/services/: loopEngine.js
